<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/orange"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <TextView
            android:id="@+id/bmiResultMessageTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/view_vertical_small_margin"
            android:gravity="center"
            android:text="@string/bmi_result_support_message"
            android:textSize="@dimen/label_large_size"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/diagnosisMessageTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/view_vertical_small_margin"
            android:gravity="center"
            android:text="@string/diagnosis_support_message"
            android:textSize="@dimen/label_large_size"
            android:textColor="@color/white"
            />

    </LinearLayout>

</RelativeLayout>