<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.orogersilva.bmimanager.calcinfo.CalcActivity"
    android:fillViewport="true"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/orange"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:id="@+id/weightLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/viewgroup_vertical_medium_margin"
                android:paddingLeft="@dimen/viewgroup_horizontal_medium_margin"
                android:paddingRight="@dimen/viewgroup_horizontal_medium_margin"
                android:paddingTop="@dimen/viewgroup_vertical_medium_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/weight"
                    android:textSize="@dimen/label_medium_size"
                    android:textColor="@color/white"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/viewgroup_vertical_small_margin"
                    android:paddingLeft="@dimen/viewgroup_horizontal_small_margin"
                    android:paddingRight="@dimen/viewgroup_horizontal_small_margin"
                    android:paddingTop="@dimen/viewgroup_vertical_small_margin"
                    >

                    <EditText
                        android:id="@+id/weightEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:inputType="number"
                        android:textAlignment="textEnd"
                        android:textSize="35sp"
                        android:textColor="@color/gray"
                        android:maxLength="3"
                        android:nextFocusDown="@+id/meterEditText"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="@string/kg"
                        android:textSize="@dimen/label_small_size"
                        android:textColor="@color/white"
                        />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/heightLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/viewgroup_vertical_medium_margin"
                android:paddingLeft="@dimen/viewgroup_horizontal_medium_margin"
                android:paddingRight="@dimen/viewgroup_horizontal_medium_margin"
                android:paddingTop="@dimen/viewgroup_vertical_medium_margin"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/height"
                    android:textSize="@dimen/label_medium_size"
                    android:textColor="@color/white"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/viewgroup_vertical_small_margin"
                    android:paddingLeft="@dimen/viewgroup_horizontal_small_margin"
                    android:paddingRight="@dimen/viewgroup_horizontal_small_margin"
                    android:paddingTop="@dimen/viewgroup_vertical_small_margin"
                    >

                    <EditText
                        android:id="@+id/meterEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:inputType="number"
                        android:textAlignment="textEnd"
                        android:textSize="35sp"
                        android:textColor="@color/gray"
                        android:maxLength="1"
                        android:nextFocusDown="@+id/centimeterEditText"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="@string/meters"
                        android:textSize="@dimen/label_small_size"
                        android:textColor="@color/white"
                        />

                    <EditText
                        android:id="@+id/centimeterEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:inputType="number"
                        android:textSize="35sp"
                        android:textAlignment="textEnd"
                        android:textColor="@color/gray"
                        android:maxLength="2"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="@string/centimeter"
                        android:textSize="@dimen/label_small_size"
                        android:textColor="@color/white"
                        />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/calculateBmiButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/calculate_imc" />

    </RelativeLayout>

</ScrollView>