<resources>

    <!-- SCREEN LABELS -->

    <string name="app_name">BMI Manager</string>
    <string name="calc_info">BMI Manager</string>
    <string name="results_info">BMI Manager</string>

    <!-- GENERAL STRINGS -->

    <string name="bmi_result_support_message">Your BMI is</string>
    <string name="calculate_imc">Calculate IMC</string>
    <string name="centimeter">cm</string>
    <string name="diagnosis_support_message">You have</string>
    <string name="height">Height</string>
    <string name="kg">Kg</string>
    <string name="meters">m</string>
    <string name="weight">Weight</string>

    <!-- BMI SEVERITY LEVELS -->

    <string name="bmi_level_1">severe thinness</string>
    <string name="bmi_level_2">moderate thinness</string>
    <string name="bmi_level_3">light thinness</string>
    <string name="bmi_level_4">appropriate BMI</string>
    <string name="bmi_level_5">overweight</string>
    <string name="bmi_level_6">degree 1 obesity</string>
    <string name="bmi_level_7">degree 2 obesity</string>
    <string name="bmi_level_8">degree 3 obesity</string>

</resources>
